                    

====================== Ongoing Work ========================================
Front Burner Tasks:
- Clean up commented out code snippets
- Testing & fixing as needed for summer teacher workshop. 

Back Burner Tasks:
- Tweaking of time alignment (especially the wheel). 
- Optimize which calibration is used for restored datasets
- Display rezero icon on all zeroable plots when linked
- Save/restore dataShift (?)
- Improved gyroscope calibration
- Plots sometimes empty after CSV export if not viewed before export (only Mac ?)
- Clean up console.log
- Clean up comments & code (ongoing)

================ Release Notes ================================================

v0.9.17 6/29/2021
zoom all sensors when one is zoomed

v0.9.16 6/29/2021
Added option to swap sign of y-axis for accel, force, gyro, mag, wheel
Cleaned up some issues with rezeroing force, displacement, light, and HG sensors

v0.9.15 6/15/2021
Minor tweaks and documentation updates.

v0.9.14 6/7/2021
Rationalized usage of calData vs plotData in plotting code.
Changed name of csv file when exporting all sensors.

v0.9.12 6/4/2021
Added time-aligned CSV export. All sensors are time-aligned and exported to a single fine. The time range for the export is defined by the top plot.
Fixed restored wheel data was shifted right by 4 ticks due to missing call to reProcessWheel()). 

v0.9.10 5/31/2021
Adding new modal for unpairing and pairing dongles with remotes (with embedded documentation) 
Removed some redundant calls to console.log

v0.9.08 5/14/2021
Save/restore raw data (rxdata). Includes saving & restoring calibration info as well.
Save local_Bvert value with magnetometer calibration constants. 
Add link to changelog on application (click on "notes)"

v0.9.06 5/8/2021
Added ability to specify the vertical B field in order to improve magnetomter calibration.
Made light sensor "zeroable".
Other small improvements to options modal. 

v0.9.04 4/30/2021